HelloUltraviolet/Fixtures/RejectedSource/Expressions/RawDerefPlaceTypingFamily/Source/Main.uv
//! Rejected raw dereference specimen for raw place typing.

public procedure rawDerefPlaceTypingFamilyReference(pointer: *mut i32) -> i32 {
    *pointer = 17
    return 17
}
